--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.10,<3.11"
 imbalanced-learn = "0.9.1"
 imblearn = "0.0"
 joblib = "1.2.0"
-pandas = "1.4.2"
+pandas = "1.5.3"
 scikit-learn = "1.2.0"
 setuptools = "61.2.0"
 numpy = ">=1.24,<1.26"
@@ -21,6 +21,17 @@ pydantic = "~=1.10"
 hydra-core = "~=1.3"
 fsspec = {version = "~=2023.6", extras = ['gcs']}
 gcsfs = "~=2023.6"
+google-cloud-secret-manager = "~=2.16"
+fastparquet = "~=2023.4"
+dvc = {version = "~=2.56", extras = ["gdrive", "gs"]}
+dask = {version = "~=2023.5", extras = ["complete"]}
+distributed = "~=2023.5"
+dask-cloudprovider = {version = "2022.10", extras = ["gcp"]}
+dask-ml = "~=2023.3"
+pygit2 = "~=1.10.1"
+bokeh = "~=3.1"
+pyOpenSSL = "22.0.0"
+cryptography = "38.0.4"
 fastapi = "~=0.104"
 uvicorn = {version = "0.30.6", extras = ["standard"]}  
 
