--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ notebook = "~=6.5"
 psycopg2-binary = "~=2.9"
 pydantic = "~=1.10"
 hydra-core = "~=1.3"
+hydra-joblib-launcher = "~=1.2"
 fsspec = {version = "~=2023.6", extras = ['gcs']}
 gcsfs = "~=2023.6"
 google-cloud-secret-manager = "~=2.16"
